Fix vr_shell shader not compiling on Samsung phones.

BUG=662534

Review-Url: https://codereview.chromium.org/2480763003
Cr-Commit-Position: refs/heads/master@{#430315}

Former-commit-id: 1d6f92104c5044b1c9057a08980088e4f3b43b75